fix: spacing tags

--- a/src/app/components/events/event-card/event-card.component.scss
+++ b/src/app/components/events/event-card/event-card.component.scss
@@ -97,7 +97,7 @@
                         padding: 2px 4px;
                         font-size: 0.85rem;
                         margin-right: 6px;
-                        margin-bottom: 2px;
+                        margin-bottom: 6px;
                     }
                 }
             }
